--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Fogo Testnet Guide</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    html,body {padding:0; margin:0; min-height:100vh; box-sizing:border-box;}
+    html, body {padding:0; margin:0; min-height:100vh; box-sizing:border-box;}
     body {
       min-height: 100vh;
       background: linear-gradient(135deg,#FF9A2F 0%,#FF6A00 100%);
@@ -27,9 +27,7 @@
       filter: drop-shadow(0 2px 26px #ff9500c2);
       user-select: none;
       transition: filter 0.18s;
-      /* Размер устанавл. инлайново */
     }
-
     #splash {
       position:fixed; z-index:10; width:100vw; height:100vh;
       top:0; left:0; display:flex; flex-direction:column;
@@ -59,58 +57,52 @@
     #main-content {display:none;animation:fadeInMain 0.89s; min-height:100vh; z-index:3;}
     @keyframes fadeInMain {from{opacity:0;} to{opacity:1;}}
     .guide-title {
-  text-align: center;
-  margin: 36px 0 28px;
-  font-size: 2.4rem;
-  font-weight: 900;
-  letter-spacing: 2.8px;
-  color: #FF7F1A;
-  font-family: 'Segoe UI', Arial, sans-serif;
-  z-index: 2;
-  position: relative;
-
-  /* Плавное мерцание */
-  animation: fogoPulse 1.6s ease-in-out infinite;
-  
-  /* Яркая оранжевая тень для эффекта свечения + черная тень для читаемости */
-  text-shadow:
-    0 0 16px #ffb553cc,
-    0 2px 8px #181818ee,
-    0 0 5px #ff9a2fcc,
-    0 0 2px #000;
-}
-
-@keyframes fogoPulse {
-  0%   { opacity: 1;   filter: brightness(1) drop-shadow(0 0 5px #ff9a2f66);}
-  50%  { opacity: 0.67; filter: brightness(1.21) drop-shadow(0 0 18px #ffbe84cc);}
-  100% { opacity: 1;   filter: brightness(1) drop-shadow(0 0 5px #ff9a2f66);}
-}
-
-    .section {display:flex;align-items:stretch;justify-content:center;margin:30px 0;gap:34px;flex-wrap:wrap;}
-    .section.reverse {flex-direction:row-reverse;}
-    .section-image {
-      width:45vw; min-width:170px; max-width:660px; height:auto;
-      border-radius:15px; box-shadow:0 2px 17px #fc5f2c11;
-      object-fit:cover; background:#fff6ee; flex:1 1 45%; align-self:center;
+      text-align: center;
+      margin: 36px 0 28px;
+      font-size: 2.4rem;
+      font-weight: 900;
+      letter-spacing: 2.8px;
+      color: #FF7F1A;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      z-index: 2;
+      position: relative;
+      animation: fogoPulse 1.6s ease-in-out infinite;
+      text-shadow:
+        0 0 16px #ffb553cc,
+        0 2px 8px #181818ee,
+        0 0 5px #ff9a2fcc,
+        0 0 2px #000;
     }
-    .section-desc {
-  flex: 1 1 45%;
-  min-width: 150px;
-  max-width: 390px;
-  display: flex;
-  flex-direction: column;
-  gap: 13px;
-  align-self: center;
-  background: rgba(255,255,255,0.82);  /* Менее прозрачный белый */
-  border-radius: 12px;
-  padding: 14px 18px;
-  box-shadow: 0 2px 18px rgba(252,95,44, 0.10);
-  z-index: 2;
-  position: relative;
-  transition: background 0.16s;
-}
-
-    .section-desc a {color:#FC5F2C;font-weight:600;text-decoration:underline; cursor:pointer;}
+    @keyframes fogoPulse {
+      0%   { opacity: 1;   filter: brightness(1) drop-shadow(0 0 5px #ff9a2f66);}
+      50%  { opacity: 0.67; filter: brightness(1.21) drop-shadow(0 0 18px #ffbe84cc);}
+      100% { opacity: 1;   filter: brightness(1) drop-shadow(0 0 5px #ff9a2f66);}
+    }
+    .step-section {
+      display: flex;
+      align-items: stretch;
+      justify-content: center;
+      margin: 30px 0;
+      gap: 34px;
+      flex-wrap: wrap;
+    }
+    .step-section.reverse {flex-direction: row-reverse;}
+    .step-image {
+      width: 45vw; min-width: 170px; max-width: 660px; height: auto;
+      border-radius: 15px; box-shadow: 0 2px 17px #fc5f2c11;
+      object-fit: cover; background: #fff6ee; flex: 1 1 45%; align-self: center;
+    }
+    .step-desc {
+      flex: 1 1 45%;
+      min-width: 150px; max-width: 390px;
+      display: flex; flex-direction: column; gap: 13px; align-self: center;
+      background: rgba(255,255,255,0.82); border-radius: 12px;
+      padding: 14px 18px;
+      box-shadow: 0 2px 18px rgba(252,95,44, 0.10);
+      z-index: 2; position: relative; transition: background 0.16s;
+      font-size: 1.09rem;
+    }
+    .step-desc a {color:#FC5F2C;font-weight:600;text-decoration:underline; cursor:pointer;}
     .footer{
       margin:38px 0 16px;text-align:center;font-size:1.05rem;color:#352400;
       background:rgba(255,255,255,0.92);border-radius:11px;box-shadow:0 4px 28px #ff640508;
@@ -118,9 +110,9 @@
       font-weight:540;z-index:2;position:relative;
     }
     @media (max-width: 750px) {
-      .section {flex-direction:column !important;gap:17px;}
-      .section-desc{max-width:97vw;}
-      .section-image{width:92vw;min-width:90px;max-width:98vw;}
+      .step-section {flex-direction:column !important;gap:17px;}
+      .step-desc{max-width:97vw;}
+      .step-image{width:92vw;min-width:90px;max-width:98vw;}
       .footer{max-width:98vw;}
       .splash-content{padding:18px 6vw 20px 6vw;}
     }
@@ -139,60 +131,96 @@
   </div>
   <div id="main-content">
     <div class="guide-title">Fogo Testnet Guide</div>
-    <div class="section">
-      <img class="section-image" src="1.png" alt="Fogo Faucet"/>
-      <div class="section-desc">
+    
+    <!-- Step 1 -->
+    <div class="step-section">
+      <img class="step-image" src="1.png" alt="Fogo Faucet"/>
+      <div class="step-desc">
         <div>1. Go to <a href="https://faucet.fogo.io/" target="_blank">Fogo Faucet</a></div>
         <div>2. Paste your SOL address</div>
         <div>3. Request tokens</div>
       </div>
     </div>
-    <div class="section reverse">
-      <img class="section-image" src="2.png" alt="Valiant"/>
-      <div class="section-desc">
+    <!-- Step 2 -->
+    <div class="step-section reverse">
+      <img class="step-image" src="2.png" alt="Valiant"/>
+      <div class="step-desc">
         <div>1. Go to <a href="https://valiant.trade/" target="_blank">Valiant</a></div>
         <div>2. Connect your SOL wallet</div>
         <div>3. Open the Trade tab</div>
         <div>4. Choose any token and make a swap</div>
       </div>
     </div>
-    <div class="section">
-      <img class="section-image" src="3.png" alt="Pools"/>
-      <div class="section-desc">
+    <!-- Step 3 -->
+    <div class="step-section">
+      <img class="step-image" src="3.png" alt="Pools"/>
+      <div class="step-desc">
         <div>1. Go to the Pools tab</div>
         <div>2. Select any pool</div>
         <div>3. Add liquidity</div>
       </div>
     </div>
+<div class="guide-title">Ambient Testnet</div>
+    <!-- Step 4 -->
+    <div class="step-section reverse">
+      <img class="step-image" src="4.png" alt="Ambient Main"/>
+      <div class="step-desc">
+        <div>1. Go to <a href="https://perps.ambient.finance/v2/trade/BTC" target="_blank">Ambient</a></div>
+        <div>2. Log in using your SOL wallet</div>
+      </div>
+    </div>
+    <!-- Step 5 -->
+    <div class="step-section">
+      <img class="step-image" src="5.png" alt="Ambient Deposit"/>
+      <div class="step-desc">
+        <div>1. Click <b>Deposit</b> and deposit at least 5 fUSD to start trading</div>
+      </div>
+    </div>
+    <!-- Step 6 -->
+    <div class="step-section reverse">
+      <img class="step-image" src="6.png" alt="Ambient Position"/>
+      <div class="step-desc">
+        <div>1. Select: <b>Long</b> or <b>Short</b></div>
+        <div>2. Adjust <b>Leverage</b></div>
+        <div>3. Choose your position size</div>
+        <div>4. Confirm the transaction</div>
+      </div>
+    </div>
+    <!-- Step 7 -->
+    <div class="step-section">
+      <img class="step-image" src="7.png" alt="Ambient Close"/>
+      <div class="step-desc">
+        <div>1. Use <b>Market</b> to close your position at the current price</div>
+        <div>2. Use <b>Limit</b> to close your position at your set price</div>
+      </div>
+    </div>
+
     <div class="footer">
       This website made by <a href="https://x.com/realsirandrew" target="_blank">realsir</a> especially for the Fogo community.
     </div>
   </div>
   <script>
-    // Больше фоток, равномерно по всему фону, увеличенный размер
+    // Animated background script (unchanged)
     function getBackgroundPhotoCount() {
       let base = Math.floor(window.innerWidth * window.innerHeight / 6000);
-      return Math.max(40, Math.min(300, base)); // ещё больше фоток при росте разрешения
+      return Math.max(40, Math.min(300, base));
     }
     const IMG_SRC = "fire.png";
     let PHOTOS = [];
     let bgDiv = document.getElementById('flying-bg');
 
-    function random(min, max) { return min + Math.random() * (max - min);}
+    function random(min, max) { return min + Math.random() * (max - min); }
     function makePhoto() {
       let img = document.createElement('img');
       img.src = IMG_SRC;
       img.className = "flying-photo";
-      // Размер увеличен в 1.5 - 1.8 раза — 40...80px
       let size = random(40, 80);
       img.style.width = img.style.height = size + "px";
-      // Старт по всему фону!
       let x = random(0, window.innerWidth - size);
       let y = random(0, window.innerHeight - size);
       img.style.left = x + "px";
       img.style.top = y + "px";
       img.style.opacity = random(0.52,0.95);
-      // Скорости/направления чуть увеличены чтобы набирать пространственный разброс
       return {
         el: img,
         x: x, y: y,
@@ -215,29 +243,21 @@
       let w = window.innerWidth, h = window.innerHeight;
       PHOTOS.forEach(p=>{
         p.x += p.dx; p.y += p.dy;
-        // Случ. смена направления для хаотичности:
         if(Math.random()<0.01) p.dx*= -1;
         if(Math.random()<0.01) p.dy*= -1;
-        // Отскок от края:
         if(p.x<0||p.x>w-p.size) p.dx*=-1;
         if(p.y<0||p.y>h-p.size) p.dy*=-1;
-        // Ещё больше разлёта — небольшие подергивания
         if(Math.random()<0.07) p.dx+=random(-0.09,0.09);
         if(Math.random()<0.07) p.dy+=random(-0.09,0.09);
-        // Ограничение максимальной скорости
         p.dx = Math.max(-1.4, Math.min(1.4, p.dx));
         p.dy = Math.max(-1.2, Math.min(1.2, p.dy));
-        // Держим в зоне экрана
         p.x = Math.max(0, Math.min(w-p.size, p.x));
         p.y = Math.max(0, Math.min(h-p.size, p.y));
         p.el.style.transform = `translate(${p.x}px,${p.y}px)`;
       });
       requestAnimationFrame(movePhotos);
     }
-    window.addEventListener('resize', ()=>{
-      spawnPhotos();
-    });
-    // Инициализация
+    window.addEventListener('resize', ()=>{ spawnPhotos(); });
     spawnPhotos();
     movePhotos();
 
@@ -256,3 +276,4 @@
   </script>
 </body>
 </html>
+
