--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         0 0 5px #ff9a2fcc,
         0 0 2px #000;
     }
-    .pyron-title {
+    .pyron-title, .fluxbeam-title {
       text-align: center;
       margin: 36px 0 28px;
       font-size: 2.4rem;
@@ -148,7 +148,6 @@
   </div>
   <div id="main-content">
     <div class="guide-title">Valient Testnet</div>
-    <!-- Steps 1-16 ... unchanged ... -->
     <!-- Step 1 -->
     <div class="step-section">
       <img class="step-image" src="1.png" alt="Fogo Faucet"/>
@@ -282,7 +281,7 @@
         <div>3. Send your tokens to Staking, and at the bottom you will see a message that everything was successful.</div>
       </div>
     </div>
-    <!-- Новый раздел Pyron Testnet -->
+    <!-- Pyron Testnet -->
     <div class="pyron-title">Pyron Testnet</div>
     <!-- Step 17 -->
     <div class="step-section">
@@ -306,6 +305,38 @@
       <div class="step-desc">
         <div>1. Now you can borrow tokens from another pool.<br>Choose another pool (for example, with fUSD),</div>
         <div>2. Click on the <b>Borrow</b> button, enter the amount, and confirm the transaction.</div>
+      </div>
+    </div>
+    <!-- FluxBeam Testnet -->
+    <div class="fluxbeam-title">FluxBeam Testnet</div>
+    <!-- Step 20 -->
+    <div class="step-section">
+      <img class="step-image" src="20.png" alt="FluxBeam Login"/>
+      <div class="step-desc">
+        <div>1. Go to <a href="https://fogo.fluxbeam.xyz/" target="_blank">FluxBeam</a> and click the Login button.</div>
+      </div>
+    </div>
+    <!-- Step 21 -->
+    <div class="step-section reverse">
+      <img class="step-image" src="21.png" alt="Phantom Connect"/>
+      <div class="step-desc">
+        <div>1. Connect using your Phantom Wallet.</div>
+      </div>
+    </div>
+    <!-- Step 22 -->
+    <div class="step-section">
+      <img class="step-image" src="22.png" alt="Search Tokens"/>
+      <div class="step-desc">
+        <div>1. Click the Search tab, then select any list (My Tokens / Top Tokens).</div>
+        <div>2. Pick any token that you have in your wallet.</div>
+      </div>
+    </div>
+    <!-- Step 23 -->
+    <div class="step-section reverse">
+      <img class="step-image" src="23.png" alt="Swap FluxBeam"/>
+      <div class="step-desc">
+        <div>1. Select the action you want: Buy or Sell.</div>
+        <div>2. Enter the amount and click Swap.</div>
       </div>
     </div>
     <div class="footer">
@@ -386,4 +417,3 @@
   </script>
 </body>
 </html>
-
