--- a/.render_temp_index.html
+++ b/.render_temp_index.html
@@ -339,10 +339,38 @@
         <div>2. Enter the amount and click Swap.</div>
       </div>
     </div>
+
+<div class="fluxbeam-title">!!! Fogo Mainnet !!!</div>
+<div class="step-section">
+  <img class="step-image" src="24.png" alt="Portfolio Fogo" />
+  <div class="step-desc">
+    <div>Go to <a href="https://portfolio.fogo.io/" target="_blank">Portfolio Fogo</a> and then connect your wallet.</div>
+  </div>
+</div>
+<div class="step-section reverse">
+  <img class="step-image" src="25.png" alt="Transfer Tab" />
+  <div class="step-desc">
+    <div>Select the <b>Transfer</b> tab.</div>
+  </div>
+</div>
+<div class="step-section">
+  <img class="step-image" src="26.png" alt="USDC and SOL" />
+  <div class="step-desc">
+    <div>Make sure you have $USDC and some $SOL in your wallet for fees, then click <b>Transfer</b>.</div>
+  </div>
+</div>
+<div class="step-section reverse">
+  <img class="step-image" src="27.png" alt="USDC Transferred" />
+  <div class="step-desc">
+    <div>Congratulations, you transferred your $USDC to Fogo Mainnet. Now we expect more dApps.</div>
+  </div>
+</div>
     <div class="footer">
       This website made by <a href="https://x.com/realsirandrew" target="_blank">realsir</a> especially for the Fogo community.
     </div>
   </div>
+
+
   <script>
     function getBackgroundPhotoCount() {
       let base = Math.floor(window.innerWidth * window.innerHeight / 6000);
